@@ -19,6 +19,7 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.blumbit.compras_ventas.entity.Usuario;
 import com.blumbit.compras_ventas.repository.UsuarioRepository;
@@ -45,23 +46,27 @@ public class AppConfig {
 
     @Bean
     public UserDetailsService userDetailsService() {
-        return username -> {
-            Usuario usuario = usuarioRepository.findByEmail(username)
-                .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado"));
-            List<GrantedAuthority> authorities = usuario.getRoles().stream()
-                .flatMap(rol -> {
-                    Stream.Builder<GrantedAuthority> builder = Stream.builder();
-                    builder.add(new SimpleGrantedAuthority("ROLE_"+rol.getNombre()));
-                    rol.getPermisos().stream().map(permiso -> new SimpleGrantedAuthority(permiso.getNombre()))
+        return username -> loadUserByUsername(username);
+    }
+
+    @Transactional(readOnly = true)
+    public org.springframework.security.core.userdetails.UserDetails loadUserByUsername(String username) {
+        Usuario usuario = usuarioRepository.findByEmail(username)
+            .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado"));
+        List<GrantedAuthority> authorities = usuario.getRoles().stream()
+            .flatMap(rol -> {
+                Stream.Builder<GrantedAuthority> builder = Stream.builder();
+                builder.add(new SimpleGrantedAuthority("ROLE_" + rol.getNombre()));
+                rol.getPermisos().stream()
+                    .map(permiso -> new SimpleGrantedAuthority(permiso.getNombre()))
                     .forEach(builder::add);
-                    return builder.build();
-                }).collect(java.util.stream.Collectors.toList());
-                return User.builder()
-                    .username(usuario.getEmail())
-                    .password(usuario.getPassword())
-                    .authorities(authorities)
-                    .build();
-        };
+                return builder.build();
+            }).toList();
+        return User.builder()
+            .username(usuario.getEmail())
+            .password(usuario.getPassword())
+            .authorities(authorities)
+            .build();
     }
 
     @Bean
